# rettungsdient-isochrone

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Statistische_Bezirke_Hagen.html  Wohnbezirke_Hagen.html
notebooks/: 0.01-download-data.ipynb  0.02-explore_and_plot_Bezirke.ipynb  0.03-calculate_Hauskorrdinaten_latlon.ipynb  0.04_Calculate_distances_of_all_houses.ipynb
ors/: docker-compose.yml
reports/figures/: Stadtbezirke_Hagen.html
rettungsdient_isochrone/: __init__.py  dataset.py  features.py  plots.py
rettungsdient_isochrone/modeling/: predict.py  train.py
src/: download.py  load.py  ors.py  plotting.py
