[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rettungsdient_isochrone"
version = "0.0.1"
description = "Analyse und Modellierung der Anfahrtszeiten des Rettungsdientes Hagen"
authors = [
  { name = "Philipp Schl\u00fcter" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rettungsdient_isochrone"]
force_sort_within_sections = true
